@@ -1111,7 +1111,7 @@ EOF
 		  int bar __attribute__ ((visibility ("protected"))) = 1;
 EOF
 		  libc_cv_visibility_attribute=no
-		  if ${CC-cc} -Werror -S conftest.c -o conftest.s >/dev/null 2>&1; then
+		  if AC_TRY_COMMAND[${CC-cc} -Werror -S conftest.c -o conftest.s 1>&AS_MESSAGE_LOG_FD 2>&AS_MESSAGE_LOG_FD]; then
 		    if grep '\.hidden.*foo' conftest.s >/dev/null; then
 		      if grep '\.protected.*bar' conftest.s >/dev/null; then
 			libc_cv_visibility_attribute=yes
@@ -1134,7 +1134,7 @@ EOF
 		  int bar (int x) { return x; }
 EOF
 		  libc_cv_broken_visibility_attribute=yes
-		  if ${CC-cc} -Werror -S conftest.c -o conftest.s >/dev/null 2>&1; then
+		  if ${CC-cc} -Werror -S conftest.c -o conftest.s >&AS_MESSAGE_LOG_FD 2>&AS_MESSAGE_LOG_FD; then
 changequote(,)dnl
 		    if grep '\.hidden[ 	_]foo' conftest.s >/dev/null; then
 changequote([,])dnl
