@@ -1,3 +1,6 @@
+2003-02-25  Roland McGrath  <roland@redhat.com>
+
+
 2003-02-25  Steven Munroe  <sjmunroe@us.ibm.com>
 
         * elf/elf.h: Add new R_PPC64_* relocs for TLS.
@@ -5,6 +8,8 @@
         (TLS_LE, TLS_IE, TLS_LD, TLS_GD): Define.
 	* sysdeps/powerpc/powerpc64/elf/configure.in: New file.
 	* sysdeps/powerpc/powerpc64/elf/configure: New file (generated).
+	* sysdeps/powerpc/powerpc64/dl-machine.h: Support new TLS relocs.
+	* sysdeps/powerpc/powerpc64/dl-tls.h: New file.
 
         * sysdeps/powerpc/elf/libc-start.c (__libc_start_main):
 	Do DL_SYSDEP_OSCHECK here, matching 2002-12-01 change to generic file.
